# GoCanvas-Readonly-MCP

./: .env.example  .gitignore  README.md  openapi.yaml  pyproject.toml  server.py  swagger.yaml
GoCanvas/: Duplication.md
GoCanvas/All Apex Apps/: 1077931 - APEX - UST Evaluation Form.json  1336811 - Fannie Mae - Office Safety Inspection.json  1752547 - LKQ - Work Order.json  1762394 - MS4 - Site Inspection.json  1837366 - APEX - Photo Log - NEW Update.json  1919729 - ESC Inspection Form.json  2000701 - Magellan - SWPPP Inspection Form.json  2032226 - Wawa - Water Systems.json  2177320 - ValPoint Fugitive Emissions Monitoring.json  2222327 - APEX - Photo Log - Phase I.json  2533432 - Kite Realty - LS Maintenance.json  2660702 - Bridgestone  SW Inspection.json  3046317 - New York - EW Maintenance.json  3200941 - APEX - Pavement Maintenance.json  3244813 - Apex - Mold Inspection.json  3304589 - APEX - Photos Before-After.json  3683380 - WSP - Photo Log.json  3761220 - APEX - SW BMP Rain Event.json  4194565 - NextEra Energy Field Inspection.json  4330001 - APEX - Photo Log - Large Photos.json  4559339 - RealTerm Site Audit.json  4851427 - Apex - Construction Site Daily Log.json  5060759 - Apex - SSDS Inspection Log.json  5297309 - UMass - Stormwater Inspection.json  5426534 - Construction Daily Report.json  5450954 - Regency Centers Inspection.json
GoCanvas/All Apex Apps/Amazon/: 4695959 - Amazon SPCC Inspection.json  5052716 - Amazon SW Routine Inspection.json  (+1 more)
GoCanvas/Lewis/: 5022158 - Lewis Group Policies and Procedures.json  5820524 - First Energy - JCPL ER.json
(+150 files in other folders)
