[project]
name = "gocanvas-mcp"
version = "0.1.0"
description = "Read-only MCP server for the GoCanvas API v3 (forms, submissions, reports, reference data)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
]

[project.scripts]
gocanvas-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["server.py"]

[tool.hatch.build.targets.wheel.sources]
"server.py" = "server.py"
